Reorganized About dirty Element style to CSS Comment to .CSS for Detail

--- a/signIn.html
+++ b/signIn.html
@@ -32,9 +32,9 @@
          </div>
          <div class="SocialSign">
             <a>소셜 로그인</a>
-            <div class="icons">
-               <a href="https://www.google.com/" ><img class="icon" src="Assets/google.svg" alt="Google"></a>
-               <a href="https://www.kakaocorp.com/"><img class="icon" src="Assets/social_kakaotalk.png" alt="Kakaotalk"></a>
+            <div class="socialLoginIcons">
+               <a href="https://www.google.com/" ><img class="socialLoginIcon" src="Assets/google.svg" alt="Google"></a>
+               <a href="https://www.kakaocorp.com/"><img class="socialLoginIcon" src="Assets/social_kakaotalk.png" alt="Kakaotalk"></a>
             </div>
          </div>
       </section>  
