--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,12 +29,9 @@
                <img src="Assets/main_Image.png" alt="main_image">
             </div>
          </header>
-         <div style="background-color: var(--LBrary-White); width: 100%; padding-bottom: 120px;">
+         <div class="articleWhiteBackground">
             <article style="padding-top: 120px;" class="landingPage">
-               <P class="title"><span style="background: linear-gradient(96deg, #FE8A8A 1.72%, #A4CEFF 74.97%);
-                     background-clip: text;
-                     -webkit-background-clip: text;
-                     -webkit-text-fill-color: transparent;">원하는 링크</span>를 저장하세요</P>
+               <P class="title"><span class="redBlueGradation">원하는 링크</span>를 저장하세요</P>
                <p class="description">나중에 읽고 싶은 글, 다시 보고 싶은 영상,
                   사고 싶은 옷, 기억하고 싶은 모든 것을
                   한 공간에 저장하세요.</p>
@@ -43,19 +40,13 @@
             <article class="landingPage">
                <img src="Assets/main_image2.png" alt="SaveLink_YourFavorImage">
                <P class="title">링크를 폴더로
-                  <span style="background: linear-gradient(277deg, #6FBAFF 59.22%, #FFD88B 93.66%);
-                  background-clip: text;
-                  -webkit-background-clip: text;
-                  -webkit-text-fill-color: transparent;">관리</span>하세요</P>
+                  <span class="orangeBlueGradation">관리</span>하세요</P>
                <p class="description">나만의 폴더를 무제한으로 만들고 
                   다양하게 활용할 수 있습니다.</p> 
             </article>
             <article class="landingPage">
                <P class="title">저장한 링크를
-                  <span style="background: linear-gradient(99deg, #6D7CCD 19.76%, rgba(82, 136, 133, 0.22) 52.69%);
-                  background-clip: text;
-                  -webkit-background-clip: text;
-                  -webkit-text-fill-color: transparent;">공유</span>해 보세요</P>
+                  <span class="blueWhiteGradation">공유</span>해 보세요</P>
                <p class="description">여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 
                   공유해 보세요.</p>
                <img src="Assets/main_image3.png" alt="SaveLink_YourFavorImage">
@@ -63,10 +54,7 @@
             <article class="landingPage">
                <img src="Assets/main_image4.png" alt="SaveLink_YourFavorImage">
                <P class="title">저장한 링크를
-                  <span style="background: linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%);
-                  background-clip: text;
-                  -webkit-background-clip: text;
-                  -webkit-text-fill-color: transparent;">검색</span>해 보세요</P>
+                  <span class="bluePnikGradation">검색</span>해 보세요</P>
                <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
             </article>
          </div>
