--- a/signup.html
+++ b/signup.html
@@ -39,9 +39,9 @@
          </div>
          <div class="SocialSign">
             <a>다른 방식으로 가입하기</a>
-            <div class="icons">
-               <a href="https://www.google.com/" ><img class="icon" src="Assets/google.svg" alt="Google"></a>
-               <a href="https://www.kakaocorp.com/"><img class="icon" src="Assets/social_kakaotalk.png" alt="Kakaotalk"></a>
+            <div class="socialLoginIcons">
+               <a href="https://www.google.com/" ><img class="socialLoginIcon" src="Assets/google.svg" alt="Google"></a>
+               <a href="https://www.kakaocorp.com/"><img class="socialLoginIcon" src="Assets/social_kakaotalk.png" alt="Kakaotalk"></a>
             </div>
          </div>
       </section>  
